Bug 125436 - Dialog box disabled to choose between Firebird or hsqldb embedded when creating DB
Summary: Dialog box disabled to choose between Firebird or hsqldb embedded when creati...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-05-21 20:32 UTC by Julien Nabet
Modified: 2019-05-22 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-05-21 20:32:30 UTC
Description:
On pc Debian x86-64 with master sources updated today, the dialog box disabled to choose between Firebird or hsqldb embedded when creating DB

Steps to Reproduce:
1. Launch Base


Actual Results:
Create a new database is selected by default but embedded database listbox is disabled.

Expected Results:
Create a new database is selected by default but embedded database listbox is enabled, so you can choose the type of DB.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Drew Jensen 2019-05-21 21:57:55 UTC
Confirmed w/ Ubuntu 18.04.1, LO Version: 6.3.0.0.alpha1+
Build ID: b26b6cab5d8147d35f76a21c333719c80840d08d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-20_23:15:15

The dialog starts out that way, always. 

If you select one of the other option buttons on the dialog page then go back and select the Which engine option button the drop down does become active.
Comment 2 Julien Nabet 2019-05-22 09:24:15 UTC
Noel: thought you might be interested in this one since you had fixed the regression from https://cgit.freedesktop.org/libreoffice/core/commit/?id=7df04009b98165f89c89f1e506ebafd2fecc8f5a
Comment 3 Xisco Faulí 2019-05-22 14:12:50 UTC
Regression from

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-05-18 17:57:09 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-05-18 21:47:48 +0200
commit 1f3d18445cad89a8ab572028f2bc1b54914893e5 (patch)
tree fd3db9f93683a228fe576c9dcbe26015140f411d
parent 33cc1debf963c503636cf9219aa81d1a6cf2e943 (diff)
tdf#124951 Open button on Database Wizard dialog is enabled..
..when it should be disabled

Bisected with: bibisect-linux64-6.3

Patch in gerrit: https://gerrit.libreoffice.org/#/c/72780/
Comment 4 Commit Notification 2019-05-22 17:38:25 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/17bdc8ca7d4c74245709ddac404e49c8589433eb%5E%21

tdf#125436: Do not disable type options list

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2019-05-22 19:11:10 UTC
On pc Debian x86-64 with master sources updated today (which includes the patch), I don't reproduce this.
Thank you Noel and Xisco! :-)