tdf#125436: Do not disable type options list

Change-Id: I2080f3c04a04cea626d4969b59e54612cbefe03b